# drivenspark-exam

./: README.md
back/: .env  Cargo.toml  README.md  docker-compose.yml
back/migrations/2023-05-22-092821_data/: up.sql
back/src/: card.rs  database.rs  domain.rs  errors.rs  filters.rs  main.rs  schema.rs
front/: README.md  pubspec.yaml
front/lib/: main.dart
front/lib/services/: data_service.dart
front/lib/widget/: card.dart
