[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "64-column-tables"] }
log = "0.4"
openssl = "*"
pretty_env_logger = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0"
tokio = { version = "^1.18", features = ["macros", "fs", "rt", "rt-multi-thread", "sync", "time"] }
warp = "0.3.3"